--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "apollo-boost": "^0.1.22",
+    "apollo-link-context": "^1.0.12",
     "bootstrap": "^4.1.3",
     "dateformat": "^3.0.3",
-    "firebase": "^5.5.0",
     "graphql": "^14.0.2",
     "i": "^0.3.6",
     "npm": "^6.4.1",
