--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-transition-group": "^1.2.1",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
     "start": "react-scripts start",
