--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-calendar-react": "^0.12.1",
     "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
