--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-context": "^1.0.12",
     "bootstrap": "^4.1.3",
     "dateformat": "^3.0.3",
+    "dotenv": "^6.2.0",
     "graphql": "^14.0.2",
     "i": "^0.3.6",
     "npm": "^6.4.1",
