--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "apollo-boost": "^0.1.22",
+    "apollo-link": "^1.2.6",
     "apollo-link-context": "^1.0.12",
+    "apollo-link-http": "^1.5.9",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "dateformat": "^3.0.3",
     "dotenv": "^6.2.0",
@@ -19,7 +22,9 @@
     "react-checkbox-group": "^4.0.1",
     "react-data-grid": "^4.0.8",
     "react-dom": "^16.6.3",
-    "react-dropzone": "^5.1.0",
+    "react-dropzone": "^8.0.3",
+    "react-dropzone-component": "^3.2.0",
+    "react-fine-uploader": "^1.1.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
