--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@livechat/ui-kit": "^0.3.0-2",
     "apollo-boost": "^0.1.22",
     "apollo-link": "^1.2.6",
     "apollo-link-context": "^1.0.12",
