--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "i": "^0.3.6",
     "npm": "^6.4.1",
     "react": "^16.6.3",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
     "react-apollo": "^2.3.1",
     "react-checkbox-group": "^4.0.1",
     "react-data-grid": "^4.0.8",
