--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "apollo-link": "^1.2.6",
     "apollo-link-context": "^1.0.12",
     "apollo-link-http": "^1.5.9",
+    "apollo-link-ws": "^1.0.12",
+    "apollo-utilities": "^1.0.27",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "dateformat": "^3.0.3",
@@ -40,7 +42,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-calendar-react": "^0.12.1",
-    "semantic-ui-react": "^0.84.0"
+    "semantic-ui-react": "^0.84.0",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "scripts": {
     "start": "react-scripts start",
