--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@livechat/ui-kit": "^0.3.0-2",
+    "@trainline/react-skeletor": "^1.0.2",
     "apollo-boost": "^0.1.22",
     "apollo-link": "^1.2.6",
     "apollo-link-context": "^1.0.12",
@@ -30,6 +31,7 @@
     "react-dropzone": "^8.0.3",
     "react-dropzone-component": "^3.2.0",
     "react-fine-uploader": "^1.1.1",
+    "react-loading-skeleton": "^1.0.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -43,7 +45,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-calendar-react": "^0.12.1",
     "semantic-ui-react": "^0.84.0",
-    "subscriptions-transport-ws": "^0.9.15"
+    "subscriptions-transport-ws": "^0.9.15",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
