--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-link-http": "^1.5.9",
     "apollo-link-ws": "^1.0.12",
     "apollo-utilities": "^1.0.27",
+    "array.prototype.flat": "^1.2.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "caniuse-lite": "^1.0.30000951",
